# WasabiGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WasabiGame.sln
CMake/: LinkToWasabi.cmake  WasabiGameHelpers.cmake  loguru.cmake
Media/RollTheBall/: resources.WSBI
Media/RollTheBall/Maps/: test.WSBI
Media/WasabiGame/Maps/: icc.FBX
RPG/: Main.cpp  RPG.vcxproj  RPG.vcxproj.filters
RPG/GameStates/: Game.cpp  Game.hpp
RPG/Maps/: RPGMaps.cpp  RPGMaps.hpp
RPG/Units/: Player.cpp  Player.hpp  RPGUnits.cpp  RPGUnits.hpp  Units.cpp
RPG/Units/AI/: PlayerAI.cpp  PlayerAI.hpp
RTB Server/: Main.cpp  RTB Server.vcxproj  RTB Server.vcxproj.filters  Server.cpp  Server.hpp
RTB Server/Clients/: Client.cpp  Client.hpp
RTB Server/Lib/: Client.hpp  Config.hpp  Selectable.hpp  Server.hpp
RTB Server/Lib/Utilities/: CircularBuffer.hpp  Config.hpp  Scheduler.hpp  Semaphore.hpp
RTB Server/Media/: resources.WSBI
RTB Server/Simulation/: Simulation.cpp  Simulation.hpp
Roll The Ball/: Main.cpp  Roll The Ball.vcxproj  Roll The Ball.vcxproj.filters
Roll The Ball/AssetsGenerator/: AssetsGenerator.hpp
Roll The Ball/AssetsGenerator/Maps/: Test.hpp
Roll The Ball/GameStates/: Game.cpp
Roll The Ball/Maps/: RTBMaps.cpp  RTBMaps.hpp  Test.hpp
Roll The Ball/Media/: resources.WSBI
Roll The Ball/Media/Maps/: test.WSBI
Roll The Ball/Networking/: Networking.cpp  Networking.hpp
Roll The Ball/Units/: BallUnit.cpp  BallUnit.hpp  Player.cpp  Player.hpp  RTBUnits.cpp  RTBUnits.hpp
WasabiGame/: Common.hpp  Main.cpp  Main.hpp  WasabiGame.vcxproj  WasabiGame.vcxproj.filters
WasabiGame/AI/: AI.cpp  AI.hpp
WasabiGame/Entities/: Object.cpp  Object.hpp  Player.cpp  Player.hpp  Unit.cpp  Unit.hpp
WasabiGame/GameStates/: BaseState.cpp  BaseState.hpp  Game.cpp  Game.hpp  Intro.cpp  Intro.hpp  Menu.cpp  Menu.hpp
WasabiGame/Maps/: Map.cpp  Map.hpp  MapLoader.cpp  MapLoader.hpp
WasabiGame/Maps/Maps/: ICC.hpp
WasabiGame/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
WasabiGame/UI/: UI.cpp  UI.hpp
WasabiGame/UI/GeneralControls/: ErrorBox.cpp  ErrorBox.frag.glsl  ErrorBox.frag.glsl.spv  ErrorBox.hpp  ErrorBoxPS.glsl
WasabiGame/UI/InputControls/: MenuButton.cpp  MenuButton.frag.glsl  MenuButton.hpp  MenuButtonPS.glsl
WasabiGame/Units/: AI.cpp  AI.hpp  Units.cpp  Units.hpp  UnitsManager.cpp  UnitsManager.hpp
WasabiGame/Units/AI/: AI.cpp  AI.hpp
include/: Common.hpp
include/RPG/GameStates/: Game.hpp
include/RPG/Maps/: ICC.hpp
include/RPG/Units/: Player.hpp  RPGUnits.hpp
include/RTBClient/: Main.hpp
include/RTBClient/GameStates/: MainGameState.hpp
include/RTBClient/Networking/: MovementNetworkingManager.hpp  Networking.hpp
include/RTBServer/: Main.hpp
include/RTBServer/Cells/: LoginCell.hpp  MatchCell.hpp  MatchmakingCell.hpp  ServerCell.hpp  ServerCellType.hpp
include/RTBServer/Game/: Game.hpp  Player.hpp  RTBConnectedPlayer.hpp
include/RTBServer/Game/GameModes/: GameMode.hpp  OneVsOneGameMode.hpp
include/RTBServer/Lib/: Client.hpp  Server.hpp
include/RTBServer/Lib/Utilities/: CircularBuffer.hpp  Config.hpp
include/RTBServer/Networking/: Networking.hpp
include/RTBServer/Repositories/: ClientsRepository.hpp
include/RTBServer/Simulation/: GameStateSyncBackend.hpp  Simulation.hpp
include/RollTheBall/: Main.hpp
include/RollTheBall/AI/: PlayerAI.hpp  RTBAI.hpp  RemoteControlledAI.hpp  TestUnitAI.hpp
include/RollTheBall/AssetsGenerator/: AssetsGenerator.hpp
include/RollTheBall/AssetsGenerator/Maps/: Test.hpp
include/RollTheBall/GameModes/: GameModes.hpp
include/RollTheBall/GameStates/: Game.hpp
include/RollTheBall/Maps/: RTBMaps.hpp  Test.hpp
include/RollTheBall/Networking/: Client.hpp  Data.hpp  GameStateSyncProtocol.hpp  Networking.hpp  Protocol.hpp  Server.hpp
include/RollTheBall/Units/: BallUnit.hpp  Player.hpp  RTBUnits.hpp  RemoteControlledAI.hpp  TestUnitAI.hpp
include/RollTheBall/Utilities/: CircularBuffer.hpp  Scheduler.hpp
include/WasabiGame/: Main.hpp
include/WasabiGame/GameStates/: BaseState.hpp  Intro.hpp  Menu.hpp
include/WasabiGame/Maps/: Map.hpp  MapLoader.hpp
include/WasabiGame/Networking/: Data.hpp  NetworkClient.hpp  NetworkListener.hpp  NetworkManager.hpp  Selectable.hpp
include/WasabiGame/ResourceManager/: ResourceManager.hpp
include/WasabiGame/UI/: UI.hpp
include/WasabiGame/UI/GeneralControls/: ErrorBox.hpp
include/WasabiGame/UI/InputControls/: MenuButton.hpp
include/WasabiGame/Units/: AI.hpp  Units.hpp  UnitsManager.hpp
include/WasabiGame/Utilities/: CircularBuffer.hpp  Config.hpp  Scheduler.hpp  Semaphore.hpp
src/RPG/: Main.cpp
src/RPG/GameStates/: Game.cpp
src/RPG/Units/: Player.cpp  RPGUnits.cpp
src/RTBClient/: Bootstrapper.cpp  Main.cpp
src/RTBClient/GameStates/: Game.cpp  MainGameState.cpp
src/RTBClient/Networking/: MovementNetworkingManager.cpp  Networking.cpp
src/RTBServer/: Bootstrapper.cpp  Main.cpp
src/RTBServer/Cells/: LoginCell.cpp  MatchCell.cpp  MatchmakingCell.cpp  ServerCell.cpp
src/RTBServer/Game/: Game.cpp  Player.cpp  RTBConnectedPlayer.cpp
src/RTBServer/Game/GameModes/: GameMode.cpp  OneVsOneGameMode.cpp
src/RTBServer/Networking/: Networking.cpp
src/RTBServer/Repositories/: ClientsRepository.cpp
src/RTBServer/Simulation/: GameStateSyncBackend.cpp  Simulation.cpp
src/RTBTest/: Main.cpp
src/RollTheBall/: Main.cpp
src/RollTheBall/AI/: PlayerAI.cpp  RTBAI.cpp  RemoteControlledAI.cpp
src/RollTheBall/GameStates/: Game.cpp
src/RollTheBall/Maps/: RTBMaps.cpp
src/RollTheBall/Networking/: GameStateSyncProtocol.cpp  Networking.cpp  Protocol.cpp
src/RollTheBall/Units/: BallUnit.cpp  Player.cpp  RTBUnits.cpp  RemoteControlledAI.cpp
src/WasabiGame/: Main.cpp
src/WasabiGame/GameStates/: BaseState.cpp  Intro.cpp  Menu.cpp
src/WasabiGame/Maps/: Map.cpp  MapLoader.cpp
src/WasabiGame/Networking/: NetworkManager.cpp
src/WasabiGame/ResourceManager/: ResourceManager.cpp
src/WasabiGame/UI/: UI.cpp
src/WasabiGame/UI/GeneralControls/: ErrorBox.cpp  (+1 more)
src/WasabiGame/Units/: AI.cpp  Units.cpp  UnitsManager.cpp
(+3 files in other folders)
